corrected dark mode UI

--- a/src/app/Home/home/home.component.scss
+++ b/src/app/Home/home/home.component.scss
@@ -91,7 +91,7 @@
 }
 
 .home {
-    padding-top: 12vh;
+    padding : 15vh 0;
 }
 
 .rows {
